--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "bugs": {
     "url": "https://github.com/Obi1002/12_Tech-Blog/issues"
   },
+  "engines": {"node": "14.16.0"},
   "homepage": "https://github.com/Obi1002/12_Tech-Blog#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
